--- a/SunamoVcf.csproj
+++ b/SunamoVcf.csproj
@@ -1,15 +1,14 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
-    <Version>23.11.7.1</Version>
+    <Version>23.12.9.1</Version>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="MixERP.Net.VCards" Version="1.0.7">
-    </PackageReference>
+    <PackageReference Include="MixERP.Net.VCards" Version="1.0.7"></PackageReference>
     <PackageReference Include="System.Memory" Version="4.5.5" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="SunamoExceptions" Version="*" />
+    <PackageReference Include="SunamoExceptions" Version="23.12.9.1" />
   </ItemGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <DefineConstants>$(DefineConstants);ASYNC</DefineConstants>
