--- a/SunamoVcf.csproj
+++ b/SunamoVcf.csproj
@@ -3,6 +3,12 @@
     <TargetFramework>net8.0</TargetFramework>
     <Version>24.7.1.1</Version>
     <Description>Working with VCF (Virtual Card File) file format</Description>
+    <Authors>www.sunamo.cz</Authors>
+    <Copyright>www.sunamo.cz</Copyright>
+    <PackageProjectUrl>https://sunamo.cz/</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/sunamo/SunamoVcf.git</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="MixERP.Net.VCards" Version="1.0.7">
