--- a/SunamoVcf.csproj
+++ b/SunamoVcf.csproj
@@ -9,17 +9,19 @@
     <RepositoryUrl>https://github.com/sunamo/SunamoVcf.git</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageReadmeFile>readme.md</PackageReadmeFile>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="MixERP.Net.VCards" Version="1.0.7">
     </PackageReference>
+    <None Include="readme.md" Pack="True" PackagePath="." />
   </ItemGroup>
   <ItemGroup>
   </ItemGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DefineConstants>$(DefineConstants);ASYNC;SunamoVcf</DefineConstants>
+    <DefineConstants>$(DefineConstants);ASYNC;SunamoVcf;SunamoVcf.csproj</DefineConstants>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <DefineConstants>$(DefineConstants);ASYNC;SunamoVcf</DefineConstants>
+    <DefineConstants>$(DefineConstants);ASYNC;SunamoVcf;SunamoVcf.csproj</DefineConstants>
   </PropertyGroup>
 </Project>
