--- a/SunamoVcf.csproj
+++ b/SunamoVcf.csproj
@@ -1,27 +1,28 @@
 <Project Sdk="Microsoft.NET.Sdk">
-    <PropertyGroup>
-        <TargetFramework>net8.0</TargetFramework>
-        <Version>24.7.16.1</Version>
-        <Description>Working with VCF (Virtual Card File) file format</Description>
-        <Authors>www.sunamo.cz</Authors>
-        <Copyright>www.sunamo.cz</Copyright>
-        <PackageProjectUrl>https://sunamo.cz/</PackageProjectUrl>
-        <RepositoryUrl>https://github.com/sunamo/SunamoVcf.git</RepositoryUrl>
-        <RepositoryType>git</RepositoryType>
-        <PackageLicenseExpression>MIT</PackageLicenseExpression>
-        <PackageReadmeFile>readme.md</PackageReadmeFile>
-    </PropertyGroup>
-    <ItemGroup>
-        <PackageReference Include="MixERP.Net.VCards" Version="1.0.7">
-        </PackageReference>
-        <None Include="readme.md" Pack="True" PackagePath="."/>
-    </ItemGroup>
-    <ItemGroup>
-    </ItemGroup>
-    <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-        <DefineConstants>$(DefineConstants);ASYNC;SunamoVcf;SunamoVcf.csproj</DefineConstants>
-    </PropertyGroup>
-    <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-        <DefineConstants>$(DefineConstants);ASYNC;SunamoVcf;SunamoVcf.csproj</DefineConstants>
-    </PropertyGroup>
+  <PropertyGroup>
+    <TargetFramework>net8.0</TargetFramework>
+    <Version>24.10.2.1</Version>
+    <Description>Working with VCF (Virtual Card File) file format</Description>
+    <Authors>www.sunamo.cz</Authors>
+    <Copyright>www.sunamo.cz</Copyright>
+    <PackageProjectUrl>https://sunamo.cz/</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/sunamo/SunamoVcf.git</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageReadmeFile>readme.md</PackageReadmeFile>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+  </PropertyGroup>
+  <ItemGroup>
+    <PackageReference Include="MixERP.Net.VCards" Version="1.0.7">
+    </PackageReference>
+    <None Include="readme.md" Pack="True" PackagePath="." />
+  </ItemGroup>
+  <ItemGroup>
+  </ItemGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DefineConstants>$(DefineConstants);ASYNC;SunamoVcf;SunamoVcf.csproj</DefineConstants>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <DefineConstants>$(DefineConstants);ASYNC;SunamoVcf;SunamoVcf.csproj</DefineConstants>
+  </PropertyGroup>
 </Project>
