Added global using of Microsoft.Extensions.Logging.Abstractions to all projects

--- a/SunamoVcf.csproj
+++ b/SunamoVcf.csproj
@@ -21,6 +21,7 @@
     <PackageReference Include="System.Text.Encodings.Web" Version="9.0.0" />
     <PackageReference Include="System.Text.RegularExpressions" Version="4.3.1" />
     <None Include="readme.md" Pack="True" PackagePath="." />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="*" Pack="True" />
   </ItemGroup>
   <ItemGroup>
   </ItemGroup>
